Add basic, incomplete write support
This is the first milestone for the write path, it can round trip via parquito write/read paths for uncompressed, plain encoded data.
There is still much to do, but it's worth a commit at this point.
No doubt half of these interfaces and boundaries will need to change/move as work continues.